[gd_scene load_steps=7 format=3 uid="uid://sectormap3d001"]

[ext_resource type="Script" path="res://src/scenes/SectorMap3DScene.gd" id="1_scene"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.02, 0.02, 0.05, 1)
ambient_light_source = 2
ambient_light_color = Color(0.2, 0.2, 0.3, 1)
ambient_light_energy = 0.5
glow_enabled = true
glow_intensity = 0.5
glow_bloom = 0.3

[sub_resource type="BoxMesh" id="BoxMesh_storm"]
size = Vector3(60, 12, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_storm"]
transparency = 1
albedo_color = Color(0.6, 0.1, 0.8, 0.5)
emission_enabled = true
emission = Color(0.5, 0.1, 0.6, 1)
emission_energy_multiplier = 1.0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_stars"]
sky_top_color = Color(0.01, 0.01, 0.02, 1)
sky_horizon_color = Color(0.05, 0.03, 0.08, 1)
ground_bottom_color = Color(0.01, 0.01, 0.02, 1)
ground_horizon_color = Color(0.05, 0.03, 0.08, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_stars")

[node name="SectorMap3D" type="Node3D"]
script = ExtResource("1_scene")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.353553, 0.353553, 0, 0.707107, 0.707107, -0.5, -0.612372, 0.612372, 10, 20, 10)
light_color = Color(0.8, 0.8, 1.0, 1)
light_energy = 0.8
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 30, 20)
current = true
projection = 1
size = 20.0
far = 200.0

[node name="NodesContainer" type="Node3D" parent="."]

[node name="ConnectionsContainer" type="Node3D" parent="."]

[node name="StormWall" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)

[node name="StormMesh" type="MeshInstance3D" parent="StormWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
mesh = SubResource("BoxMesh_storm")
surface_material_override/0 = SubResource("StandardMaterial3D_storm")

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="SectorMapHUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="UI/SectorMapHUD"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 16.0
offset_top = 10.0
offset_right = -16.0
offset_bottom = 50.0

[node name="BackBtn" type="Button" parent="UI/SectorMapHUD/TopBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "MENU"

[node name="Spacer" type="Control" parent="UI/SectorMapHUD/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DepthLabel" type="Label" parent="UI/SectorMapHUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Depth: 0 / Storm: 0"

[node name="Spacer2" type="Control" parent="UI/SectorMapHUD/TopBar"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="CreditsLabel" type="Label" parent="UI/SectorMapHUD/TopBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "Credits: 0"

[node name="Spacer3" type="Control" parent="UI/SectorMapHUD/TopBar"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="PauseBtn" type="Button" parent="UI/SectorMapHUD/TopBar"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "||"

[node name="BottomPanel" type="PanelContainer" parent="UI/SectorMapHUD"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -140.0

[node name="HBox" type="HBoxContainer" parent="UI/SectorMapHUD/BottomPanel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MarginLeft" type="MarginContainer" parent="UI/SectorMapHUD/BottomPanel/HBox"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="TeamSlots" type="HBoxContainer" parent="UI/SectorMapHUD/BottomPanel/HBox/MarginLeft"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Spacer" type="Control" parent="UI/SectorMapHUD/BottomPanel/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionPanel" type="VBoxContainer" parent="UI/SectorMapHUD/BottomPanel/HBox"]
layout_mode = 2

[node name="UpgradeBtn" type="Button" parent="UI/SectorMapHUD/BottomPanel/HBox/ActionPanel"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "UPGRADE"

[node name="NextTurnBtn" type="Button" parent="UI/SectorMapHUD/BottomPanel/HBox/ActionPanel"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
text = "NEXT TURN"

[node name="MarginRight" type="MarginContainer" parent="UI/SectorMapHUD/BottomPanel/HBox"]
layout_mode = 2
theme_override_constants/margin_right = 16

[node name="NodeInfoPanel" type="PanelContainer" parent="UI/SectorMapHUD"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -350.0
offset_right = -16.0
offset_bottom = -160.0

[node name="VBox" type="VBoxContainer" parent="UI/SectorMapHUD/NodeInfoPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MarginTop" type="MarginContainer" parent="UI/SectorMapHUD/NodeInfoPanel/VBox"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="NodeTitle" type="Label" parent="UI/SectorMapHUD/NodeInfoPanel/VBox/MarginTop"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "BATTLE"

[node name="NodeDesc" type="RichTextLabel" parent="UI/SectorMapHUD/NodeInfoPanel/VBox"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Defend the station from enemy waves."

[node name="EnemyPreview" type="HBoxContainer" parent="UI/SectorMapHUD/NodeInfoPanel/VBox"]
layout_mode = 2

[node name="EnemyLabel" type="Label" parent="UI/SectorMapHUD/NodeInfoPanel/VBox/EnemyPreview"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Enemies:"

[node name="EnemyIcons" type="HBoxContainer" parent="UI/SectorMapHUD/NodeInfoPanel/VBox/EnemyPreview"]
layout_mode = 2

[node name="RewardPreview" type="HBoxContainer" parent="UI/SectorMapHUD/NodeInfoPanel/VBox"]
layout_mode = 2

[node name="RewardLabel" type="Label" parent="UI/SectorMapHUD/NodeInfoPanel/VBox/RewardPreview"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Rewards:"

[node name="RewardValue" type="Label" parent="UI/SectorMapHUD/NodeInfoPanel/VBox/RewardPreview"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
text = "3-5 Credits"

[node name="MarginBottom" type="MarginContainer" parent="UI/SectorMapHUD/NodeInfoPanel/VBox"]
layout_mode = 2
theme_override_constants/margin_bottom = 8
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="EnterBtn" type="Button" parent="UI/SectorMapHUD/NodeInfoPanel/VBox/MarginBottom"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ENTER"

[node name="Instructions" type="Label" parent="UI/SectorMapHUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -20.0
offset_right = 300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "[Click] Select Node | [Double-Click] Enter | [WASD] Move Camera | [Scroll] Zoom"
horizontal_alignment = 1
